  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.94 2010/07/10 19:48:43 stream Exp $
==========================================================================

2.9100
------

2.9109.518  fix: all: OGR-NG codebase fixes (#4295)
            imp: all: a kind of stress test for OGR-NG
            imp: cellbe: faster OGR-NG SPU ASM core
            imp: all: log errors to file during tests and buffer update
            fix: x86: possible division by zero in cpuinfo

2.9108-517  imp: x86: new OGR-NG 32- and 64-bit cores (#4256)
            imp: x86: identification of new i5/i7 chips (#4271)
            imp: rc5-72: random subspace prefix could be stored in .ini file
            imp: stream: faster rc5-72 core for HD5xxx GPUs
            imp: cellbe: faster OGR-NG SPU ASM core
            imp: x86: identification for celeron tulatin (#4289)

2.9107-516  imp: add cpu/os id to client request packets
                 for improved client control
            chg: cuda,stream: remove beta expiry
            new: stream: new rc5-72 2th core (#4278)
            fix: stream: Win RDP connection crash (#4235)
            chg: x86: default rc5-72 core selection for some cpus (#4193)

2.9107-515  imp: cellbe: faster OGR-NG SPU ASM core

2.9106-514  fix: all: cannot run test or bench if OS doesn't support
                      cpu count detection.
            imp: x86: Via C7-D/M Model D detection (#4246)
            fix: stream: rc5-72 added Catalyst 9.9 support
            fix: some: one thread stays asleep in 'pause when running' (#4248)
            fix: haiku: ps output changed, preventing shutdown of other dnetc